# winrt-learning

./: CMakeLists.txt  README.md
src/1_hello_world_no_dep/: CMakeLists.txt  main.cpp  pch.h
